--- a/poster.tex
+++ b/poster.tex
@@ -10,6 +10,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
 \usepackage[size=custom,width=120,height=72,scale=1.0]{beamerposter}
+% A1 poster width=594mm | 23.39in , height=841mm | 33.07in
 \usetheme{gemini}
 \usecolortheme{gemini}
 \usepackage{graphicx}
